# tha-0027

./: README.md  data.py  main.py  pyproject.toml  strategy.py
