[tool.poetry]
name = "tha-0027"
version = "0.1.0"
description = ""
authors = ["pavittarx <29155477+pavittarx@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
